Show plugins without kcmServices so they can be disabled

Re comment #5
a) cannot reproduce, Summary has a checkbox to disable it
c) cannot reproduce, Pending To-dos has no checkbox
e) cannot reproduce, Summary is disabled with checkbox
f) cannot reproduce, Components has no checkbox
g) this is fixed by this commit

Re comment #6
A) still applies, I gave up finding a way to get the weight
B) due to addressbook rewrite "Contacts" shows twice here
C) is still fixed by this commit

BUG: 152495

svn path=/trunk/KDE/kdelibs/; revision=1016806